# streamlit_packaging_demo

./: .gitignore  README.md  requirements.txt
salaries/: pyproject.toml
salaries/src/salaries/: app.py
salaries/src/salaries/assets/style/: dashboard.css
salaries/src/salaries/components/: charts.py  filters.py  kpis.py
salaries/src/salaries/pages/: dashboard.py  home.py  raw_data.py
salaries/src/salaries/utils/: constants.py  helpers.py
